Upgrade dependencies
Removed @js-temporal/polyfill because CLJS build was failing with the following error:

shadow-cljs - running: lein with-profile +cljs run -m shadow.cljs.devtools.cli --npm release frontend
[:frontend] Compiling ...
failed to convert sources
{:tag :shadow.build.closure/convert-error, :sources [[:shadow.build.npm/resource "node_modules/jsbi/dist/jsbi-umd.js"] [:shadow.build.npm/resource "node_modules/@js-temporal/polyfill/dist/index.cjs"] [:shadow.build.npm/resource "node_modules/react/cjs/react.production.min.js"] [:shadow.build.npm/resource "node_modules/react/cjs/react.development.js"] [:shadow.build.npm/resource "node_modules/react/index.js"] [:shadow.build.npm/resource "node_modules/scheduler/cjs/scheduler.production.min.js"] [:shadow.build.npm/resource "node_modules/scheduler/cjs/scheduler.development.js"] [:shadow.build.npm/resource "node_modules/scheduler/index.js"] [:shadow.build.npm/resource "node_modules/react-dom/cjs/react-dom.production.min.js"] [:shadow.build.npm/resource "node_modules/react-dom/cjs/react-dom.development.js"] [:shadow.build.npm/resource "node_modules/react-dom/index.js"]]}
ExceptionInfo: failed to convert sources
	shadow.build.closure/convert-sources-simple*/fn--15007 (closure.clj:2077)
	shadow.build.closure/convert-sources-simple* (closure.clj:2064)
	shadow.build.closure/convert-sources-simple* (closure.clj:1928)
	shadow.build.closure/convert-sources-simple (closure.clj:2238)
	shadow.build.closure/convert-sources-simple (closure.clj:2188)
	shadow.build.compiler/maybe-closure-convert (compiler.clj:1245)
	shadow.build.compiler/maybe-closure-convert (compiler.clj:1238)
	shadow.build.compiler/compile-all (compiler.clj:1494)
	shadow.build.compiler/compile-all (compiler.clj:1357)
	shadow.build.api/compile-sources (api.clj:261)
	shadow.build.api/compile-sources (api.clj:253)
	shadow.build/compile (build.clj:512)
	shadow.build/compile (build.clj:493)
	shadow.cljs.devtools.api/release* (api.clj:338)
	shadow.cljs.devtools.ap